# devchat

./: .chatconfig.json  .flake8  .gitignore  .gitmodules  .pylintrc  .travis  Makefile  README.md  README.md.old  README.zh.md  diff_file  no_binary_install.sh  pyproject.toml  requirements.txt  setup.py
.chat/: config.json
.circleci/: config.yml
.github/workflows/: dev.yaml
devchat/: __init__.py  __main__.py  _cli.py  _cli_log.py  _cli_prompt.py  _cli_topic.py  assistant.py  chat.py  config.py  message.py  namespace.py  prompt.py  requirements.txt  store.py  utils.py  workspace_util.py
devchat/_cli/: __init__.py  click_main.py  command.py  errors.py  log.py  main.py  optimize.py  prompt.py  route.py  router.py  run.py  topic.py  utils.py
devchat/_service/: .env.example  Makefile  config.py  custom_logging.py  gunicorn_logging.py  logger_util.py  main.py  uvicorn_logging.py
devchat/_service/route/: __init__.py  async_socket.py  log.py  logs.py  message.py  topics.py  workflow.py  workflows.py
devchat/anthropic/: __init__.py  anthropic_chat.py
devchat/chat/: __init__.py  chat.py  openai_chat.py
devchat/chatmark/: README.md  __init__.py  form.py  iobase.py  step.py  widgets.py
devchat/engine/: __init__.py  command_parser.py  command_runner.py  namespace.py  recursive_prompter.py  router.py  util.py
devchat/general/: __init__.py  run.py
devchat/general/baidu/: run.py  (+1 more)
devchat/ide/: __init__.py  idea_services.py  rpc.py  service.py  types.py  vscode_services.py
devchat/llm/: __init__.py  chat.py  openai.py  pipeline.py  text_confirm.py  tools_call.py
devchat/memory/: __init__.py  base.py  fixsize_memory.py
devchat/msg/: chatting.py  log_util.py  logm.py  path.py  schema.py  topic_util.py  user_info.py  util.py
devchat/openai/: __init__.py  http_openai.py  openai_assistant.py  openai_chat.py  openai_message.py  openai_prompt.py
devchat/others/: __init__.py  other_chat.py
devchat/workflow/: README.md  cli.py  env_manager.py  envs.py  namespace.py  path.py  schema.py  step.py  update_util.py  user_setting.py  workflow.py
prompts/code/: instruct.txt
prompts/coder/: instruct.txt  language_python.txt
prompts/write_code/: header.txt  instruct.txt  instruction.txt  python.txt
prompts/write_commit_message/: instruct.txt  instruction.txt  system_message
prompts/writer/: instruct.txt
scripts/: purge_topics.py
tests/: conftest.py  requirements.txt  test_cli.py  test_cli_log.py  test_cli_prompt.py  test_cli_topic.py  test_command_parser.py  test_config.py  test_message.py  test_namespace.py  test_openai_message.py  test_openai_prompt.py  test_prompt.py  test_prompter.py  test_store.py  test_utils.py
tests/stream_responses/: response1.json  response2.json  response3.json  response4.json  response5.json  response6.json  response7.json  response8.json
workflows/code/: instruct.txt
workflows/commit_message/: instruct.txt
(+21 files in other folders)
